Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- LDAP multivalue search is done using substring match
- LocalDirectory "Recursion Depth Exceeded" bug fixed.
- The test if there was a local directory is no longer necessary.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-